Fix :  Dashboar alignment and removing packages.

--- a/src/_styles/dashboard.scss
+++ b/src/_styles/dashboard.scss
@@ -42,8 +42,8 @@
     flex-shrink: 0;
   }
   .right-dashboard-wrapper {
-    flex-shrink: 0;
-    flex-grow: 1;
+    flex-shrink: 1;
+    flex-grow: 0;
     background-color: $dashboard-background;
   }
   .right-dashboard {
@@ -74,6 +74,7 @@
   .form-cards {
     display: flex;
     flex-wrap: wrap;
+    min-width: 0px;
   }
   .form-card {
     width: 178px;
